// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should match snapshots 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-0"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  padding-right: 48px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  background-color: #E5EDFC;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-1"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value="foo"
      />
      
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c3"
        data-qtm-preloader="icon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 8px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  display: block;
  font-weight: bold;
  margin: 8px 0 0;
  color: inherit;
}

.c2 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    <label
      class="c1"
      for="input-2"
    >
      Text label
    </label>
    
    <div
      class="c2"
    >
      <input
        class="c3"
        id="input-2"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 4`] = `
.c5 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  padding-right: 48px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
  border-color: #e91b0c;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #e91b0c;
  box-shadow: 0px 3px 1px -2px rgba(233,27,12,0.2),0px 2px 2px 0px rgba(233,27,12,0.14),0px 1px 5px 0px rgba(233,27,12,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: inherit;
}

.c4 {
  color: #e91b0c;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-3"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c3 c4"
        data-qtm-preloader="icon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      
    </div>
    
    <span
      class="InputErrorMessage-sc-s0eyav-0 c5"
    >
      Error message
    </span>
  </div>
</div>
`;

exports[`Input component should match snapshots 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-4"
        maxlength="255"
        minlength="0"
        placeholder=""
        required=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c4 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  padding-left: 48px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-calendar-picker-indicator,
.c4::-webkit-search-cancel-button {
  display: none;
}

.c4::-ms-clear {
  display: none;
}

.c4:hover,
.c4:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c4[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c4[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: inherit;
}

.c3 {
  pointer-events: none;
  left: 16px;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c2 c3"
        data-qtm-preloader="icon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <input
        class="c4"
        id="input-5"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="search"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        disabled=""
        id="input-6"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 8`] = `
.c3 {
  color: #ac001a;
  margin-top: 8px;
  cursor: text;
  display: block;
  line-height: normal;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c4 {
  color: inherit;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-7"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    <span
      class="InputErrorMessage-sc-s0eyav-0 c3 c4"
    >
      this is a helper text
    </span>
    
  </div>
</div>
`;

exports[`Input component should match snapshots 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c3 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3::-ms-clear {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c3[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
  color: inherit;
}

.c2 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    <span
      class="c1"
    >
      this is a description label
    </span>
    <div
      class="c2"
    >
      <input
        class="c3"
        id="input-8"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c5 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  padding-left: 48px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c5::-webkit-inner-spin-button,
.c5::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5::-webkit-calendar-picker-indicator,
.c5::-webkit-search-cancel-button {
  display: none;
}

.c5::-ms-clear {
  display: none;
}

.c5:hover,
.c5:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c5[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c5:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c5[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: inherit;
}

.c4 {
  pointer-events: none;
  left: 16px;
}

.c1 {
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0;
  color: inherit;
}

.c2 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    <span
      class="c1"
    >
      this is a description label
    </span>
    <div
      class="c2"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c3 c4"
        data-qtm-preloader="icon"
        description="this is a description label"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <input
        class="c5"
        id="input-9"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="search"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 11`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-10"
        maxlength="255"
        minlength="0"
        placeholder="this input has a placeholder"
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 12`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-11"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 13`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-12"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 14`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-13"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 15`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-14"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 16`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-15"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="text"
        value=""
      />
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`Input component should match snapshots 17`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  color: #424242;
}

.c2 {
  -webkit-appearance: none;
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  margin-top: 0px;
  padding: 8px 16px;
  padding-right: 48px;
  background-color: #ffffff;
  border: 2px solid #999999;
  color: #424242;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2::-ms-clear {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1250C4;
  box-shadow: 0px 3px 1px -2px rgba(18,80,196,0.2),0px 2px 2px 0px rgba(18,80,196,0.14),0px 1px 5px 0px rgba(18,80,196,0.12);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  color: #999999;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #fff5f5 inset;
}

.c2[disabled] {
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  cursor: pointer;
  position: absolute;
  right: 16px;
  bottom: 10px;
  width: 24px;
  color: inherit;
}

.c1 {
  position: relative;
}

<div>
  <div
    class="c0"
  >
    
    
    <div
      class="c1"
    >
      <input
        class="c2"
        id="input-16"
        maxlength="255"
        minlength="0"
        placeholder=""
        type="password"
        value=""
      />
      
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root c3"
        data-qtm-preloader="icon"
        description=""
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        theme="[object Object]"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
        />
      </svg>
      
    </div>
    
    
  </div>
</div>
`;
